# full-stack-todo-rust-course

./: .gitignore  docker-compose.yml
backend/rust/axum/lessons/data/: Cargo.toml  README.md
backend/rust/axum/lessons/data/src/: lib.rs  main.rs
backend/rust/axum/lessons/data/src/database/: mod.rs  prelude.rs  tasks.rs  users.rs
backend/rust/axum/lessons/data/src/routes/: create_task.rs  create_user.rs  custom_json_extrator.rs  delete_task.rs  get_one_task.rs  get_tasks.rs  guard.rs  mod.rs  partial_update_task.rs  update_tasks.rs  validate_with_serde.rs
backend/rust/axum/lessons/data/src/routes/account/: users.rs
backend/rust/axum/lessons/data/src/utils/: app_error.rs  jwt.rs
backend/rust/axum/lessons/hello_world/: Cargo.toml
backend/rust/axum/lessons/hello_world/src/: lib.rs  main.rs
backend/rust/axum/lessons/routing/: Cargo.toml
backend/rust/axum/lessons/routing/src/: lib.rs
backend/rust/axum/lessons/routing/src/routes/: always_errors.rs  get_json.rs  hello_world.rs  middleware_message.rs  mirror_body_json.rs  mirror_body_string.rs  mirror_custom_header.rs  mod.rs  path_variables.rs  query_params.rs  read_middleware_custom.rs  set_middleware_custom_header.rs  validate_with_serde.rs
