[package]
name = "data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
sea-orm = { version = "0.12.6", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_with = "3.4.0"
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
